@@ -1,3 +1,8 @@
 # Dictionary-OASIS-OOP
-THIS IS OUT BIG PROJECT TO CREATE A NEW DICTIONARY 
-WE UETER - VNU
+
+## Cài đặt
+
+- Gắn javafx-sdk-21/lib, freetts-1.2/lib, mysql-connector.jar vào Project Structure/Library
+- Gắn VM option : --module-path "Link đến javafx/lib" --add-modules javafx.controls,javafx.fxml,javafx.web
+- Download csdl từ link sau : "https://drive.google.com/drive/folders/1V-0UCwkm7gdQojzbTBzW1WA7CFZfb395?usp=sharing"
+- Cài đặt lại link đến csdl từ class DBConnection
